<resources>
    <string name="affiliation_type_college">College</string>
    <string name="affiliation_type_highschool">High School</string>
    <string name="affiliation_type_work">Work Networks</string>
    <string name="affiliation_type_regional">Regional</string>
    <string name="affiliation_type_test">Test</string>
    <string name="album_details_created_label">Created:</string>
    <string name="album_details_description_label">Description:</string>
    <string name="album_details_location_label">Location:</string>
    <string name="albums_albums">Albums</string>
    <string name="albums_create_new">Create new</string>
    <string name="albums_delete">Delete album</string>
    <string name="albums_delete_album_question">Do you want to delete this album?</string>
    <string name="albums_delete_error">Cannot delete the album at this time. Please try again later.</string>
    <string name="albums_deleting_album">Deleting album…</string>
    <string name="albums_details">Album details</string>
    <string name="albums_edit">Edit album</string>
    <string name="albums_empty_view_text">No albums found</string>
    <string name="albums_get_error">Cannot retrieve the albums at this time. Please try again later.</string>
    <string name="albums_loading">Loading albums…</string>
    <string name="albums_my_album">My albums</string>
    <string name="albums_no_photos">No photos</string>
    <string name="albums_one_photo">1 photo</string>
    <string name="albums_photos_count">%d photos</string>
    <string name="albums_pick_title">Pick an album</string>
    <string name="albums_someones_album">"%s's albums"</string>
    <string name="albums_subtitle_albums_count">%d albums</string>
    <string name="albums_subtitle_none">You have no albums</string>
    <string name="albums_subtitle_one_album">1 album</string>
    <string name="albums_view">View album</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="app_name">Facebook</string>
    <string name="back">Back</string>
    <string name="birthday_age">%d years old</string>
    <string name="add_content">Add</string>
    <string name="cancel">Cancel</string>
    <string name="processing">Processing…</string>
    <string name="contacts_profile_action">Facebook profile</string>
    <string name="chat_active_conversations">Active Conversations</string>
    <string name="chat_available_friends">Available</string>
    <string name="chat_idle_friends">Idle</string>
    <string name="chat_go_offline">Go Offline</string>
    <string name="chat_no_friends">None of your friends are available to chat.</string>
    <string name="chat_unread_message">You have 1 new message.</string>
    <string name="chat_unread_messages">You have %d new messages.</string>
    <string name="checkins_loading">Loading checkins…</string>
    <string name="checkins_no_content">No checkins</string>
    <string name="composer_action_post">Post</string>
    <string name="composer_album_selector_label">Album: %s</string>
    <string name="composer_audience">Audience</string>
    <string name="composer_friend_lists">Friend Lists</string>
    <string name="composer_groups">Groups</string>
    <string name="composer_hint_tag_people">Who Are You With?</string>
    <string name="composer_tour_dialog_title">New Privacy Controls</string>
    <string name="composer_tour_dialog_body">To make privacy simpler we made some changes including creating a new status update tool, removing and updating some settings, and giving you a clear, inline control for who sees your posts.</string>
    <string name="composer_tour_dialog_ok">Take a Tour</string>
    <string name="create_album_create_button">Create album</string>
    <string name="create_album_create_error">The album cannot be created at this time. Please try again later.</string>
    <string name="create_album_create_subtitle">Enter information below</string>
    <string name="create_album_create_success">The album was successfully created.</string>
    <string name="create_album_create_title">Create new album</string>
    <string name="create_album_creating">Creating album…</string>
    <string name="create_album_description_hint">Description</string>
    <string name="create_album_edit_button">Update album</string>
    <string name="create_album_edit_error">The album cannot be updated at this time. Please try again later.</string>
    <string name="create_album_edit_subtitle">Edit information below</string>
    <string name="create_album_edit_success">The album was successfully updated.</string>
    <string name="create_album_edit_title">Edit album</string>
    <string name="create_album_editing">Updating album…</string>
    <string name="create_album_location_hint">Location</string>
    <string name="create_album_missing_name">Please enter an album name</string>
    <string name="create_album_name_hint">Album name</string>
    <string name="create_album_no_changes">No changes found</string>
    <string name="create_album_privacy">Privacy</string>
    <string name="create_album_quit_question">Discard input?</string>
    <string name="deal_loading_error">Error loading deal</string>
    <string name="done">Done</string>
    <string name="ellipses">…</string>
    <string name="error">Error</string>
    <string name="error_loading">An error occured while loading this page.</string>
    <string name="error_with_code_and_reason" formatted="false">%1$s [%2$d/%3$s]</string>
    <string name="error_with_reason" formatted="false">%1$s [%2$s]</string>
    <string name="eula_agree">I agree</string>
    <string name="eula_disagree">"I don't agree"</string>
    <string name="about_licenses">Facebook for Android is built using open source software.</string>
    <string name="ssl_error_webview">SSL Error when loading WebView.</string>
    <string name="ssl_error_beta">SSL Error. Please turn off SSL checking if using your sandbox.</string>
    <string name="event_details_error">This event could not be loaded</string>
    <string name="events_RSVP">RSVP to this Event</string>
    <string name="events_attending">Attending</string>
    <string name="events_declined">Not Attending</string>
    <string name="events_info_address">Address</string>
    <string name="events_info_guests">Guest List</string>
    <string name="events_info_host">Host</string>
    <string name="events_info_location">Location</string>
    <string name="events_info_rsvp">RSVP</string>
    <string name="events_info_view_guests">View Guests</string>
    <string name="events_not_replied">Awaiting Reply</string>
    <string name="events_past_events">Past Events</string>
    <string name="events_rsvp_failed">Cannot RSVP. Please try again later.</string>
    <string name="events_unsure">Maybe Attending</string>
    <string name="events_upcoming_events">Upcoming Events</string>
    <string name="events_no_upcoming_event">No upcoming event.</string>
    <string name="facebook_status">Share</string>
    <string name="facebook_user">Facebook User</string>
    <string name="feature_unavailable">This feature will be available in your region soon. Thank you for your patience.</string>
    <string name="feedback_title_label">Comment</string>
    <string name="finish">Finish</string>
    <string name="friends_everyone">Everyone</string>
    <string name="friends_filter_hint">Type the name of a friend</string>
    <string name="friends_friends">Friends</string>
    <string name="friends_get_error">Cannot retrieve the friends list. Please try again later.</string>
    <string name="friends_loading">Loading friends…</string>
    <string name="friends_no_content">No friends</string>
    <string name="friends_no_search_results">No users found</string>
    <string name="friends_search_error">Search error. Please try again later.</string>
    <string name="friends_search_hint">Search by name</string>
    <string name="friends_searching">Searching…</string>
    <string name="friends_title_label">Friends</string>
    <string name="geo_permissions_allow">Allow</string>
    <string name="geo_permissions_deny">Deny</string>
    <string name="geo_permissions_dialog">%s wants to know your location.</string>
    <string name="geo_permissions_remember">Remember my preference</string>
    <string name="groups_loading">Loading groups…</string>
    <string name="groups_no_content">No groups</string>
    <string name="header_version">1.1 Dev 1</string>
    <string name="home_chat">Chat</string>
    <string name="home_events">Events</string>
    <string name="home_friends">Friends</string>
    <string name="home_groups">Groups</string>
    <string name="home_logout">Logout</string>
    <string name="home_messages">Messages</string>
    <string name="home_nearby">Nearby</string>
    <string name="home_news_feed">News Feed</string>
    <string name="home_notifications">Notifications</string>
    <string name="home_photos">Photos</string>
    <string name="home_profile">Profile</string>
    <string name="home_requests">Requests</string>
    <string name="home_settings">Settings</string>
    <string name="home_apps">Sites</string>
    <string name="last_updated">Last updated %s</string>
    <string name="loading">Loading…</string>
    <string name="location_at">At %s</string>
    <string name="login_about">About</string>
    <string name="login_account_exists">Only one Facebook account is supported.</string>
    <string name="login_clear">Remove account</string>
    <string name="login_email_title">Email</string>
    <string name="login_error_authentication">Invalid username or password.</string>
    <string name="login_error_generic">An error occurred during sign in. Please try again later.</string>
    <string name="login_error_ticker">Facebook authentication failed</string>
    <string name="login_failure_alert">Facebook authentication failed</string>
    <string name="login_password">Password</string>
    <string name="login_password_prompt">Please re-enter your Facebook password.</string>
    <string name="login_password_title">Password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_sign_up_here">"Don't have an account?"</string>
    <string name="login_signin">Login</string>
    <string name="login_signing_in">Signing in…</string>
    <string name="login_signup">Sign up</string>
    <string name="login_title">Facebook sign-in</string>
    <string name="login_username">Username</string>
    <string name="mailbox_delete_thread">Delete</string>
    <string name="mailbox_mark_message_as_read">Mark read</string>
    <string name="mailbox_mark_message_as_unread">Mark unread</string>
    <string name="privacy_visibility_separator_text">Privacy: Who can see this?</string>
    <string name="stream_share_hint">"What's on your mind?"</string>
    <string name="upload_add_title_here">Add a title here</string>
    <string name="upload_add_description_here">Add a description here</string>
    <string name="upload_upload">Upload</string>
    <string name="view_photo_caption_hint">Write photo caption…</string>
    <string name="view_photo_clear">Clear</string>
    <string name="view_photo_comment">Comment</string>
    <string name="view_photo_set_as">Set as</string>
    <string name="view_photo_share">Share</string>
    <string name="view_photo_update">Save changes</string>
    <string name="places_add_photo">Add Photo</string>
    <string name="places_checkin">Check In</string>
    <string name="places_disclosure_here_now_off">After you check in, friends can see where you are. You and your friends will also be able to check each other in wherever you go.</string>
    <string name="places_learn_more">Learn more about Places</string>
    <string name="places_next_steps">Next Steps</string>
    <string name="places_tag_friend_with_you">Tag Friends With You</string>
    <string name="places_timestamp">right now</string>
    <string name="places_title">Places</string>
    <string name="profiles_recent_activity">Recent Activity</string>
</resources>