<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:gravity="center" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_dialog_alert" />
        <TextView android:layout_gravity="left|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_title" style="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    <View android:background="@drawable/divider_horizontal_dark" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_weight="1.0" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/login_password_prompt" />
    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="0.0dip" android:text="@string/login_username" />
    <TextView android:id="@id/username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="0.0dip" />
    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="0.0dip" android:text="@string/login_password" />
    <EditText android:id="@id/password_field" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:password="true" android:singleLine="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/buttons" android:background="@android:drawable/bottom_bar" android:paddingLeft="2.0dip" android:paddingTop="4.0dip" android:paddingRight="2.0dip" android:layout_width="fill_parent" android:layout_height="52.0dip">
        <Button android:id="@id/ok_button" android:paddingRight="2.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/login_sign_in" android:layout_weight="2.0" />
        <Button android:id="@id/cancel_button" android:paddingLeft="2.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/home_logout" android:layout_weight="2.0" />
    </LinearLayout>
</LinearLayout>
