<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.facebook.katana.webview.BaseWebView android:id="@id/deals_webview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" />
    <TextView android:textStyle="bold" android:textColor="@color/dark_blue_text_color" android:id="@id/next_steps_header" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/places_next_steps" />
    <EditText android:textSize="16.0sp" android:id="@id/share_text" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/stream_share_hint" android:maxLines="2" android:maxLength="160" android:inputType="textCapSentences|textAutoCorrect" android:imeActionLabel="@string/places_checkin" android:imeActionId="100" />
    <Button android:textStyle="bold" android:textColor="@color/dark_blue_text_color" android:id="@id/tag_friends_button" android:background="@drawable/btn_action" android:focusable="true" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/places_tag_friend_with_you" />
    <Button android:textStyle="bold" android:textColor="@color/dark_blue_text_color" android:id="@id/add_photo_button" android:background="@drawable/btn_action" android:focusable="true" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/places_add_photo" />
    <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/share_button" android:background="@drawable/blue_button_background" android:focusable="true" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="1.0dip" android:text="@string/places_checkin" />
    <TextView android:textStyle="bold" android:textColor="@color/dark_blue_text_color" android:gravity="center" android:id="@id/distance_box" android:background="@drawable/btn_action" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" />
    <TextView android:textStyle="bold" android:textColor="@color/dark_blue_text_color" android:id="@id/recent_activity_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/profiles_recent_activity" />
</LinearLayout>
