<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@android:drawable/bottom_bar" android:paddingTop="2.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/mailbox_mark_as_read_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="2.0dip" android:text="@string/mailbox_mark_message_as_read" android:layout_weight="0.33" />
    <Button android:id="@id/mailbox_mark_as_unread_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="2.0dip" android:text="@string/mailbox_mark_message_as_unread" android:layout_weight="0.33" />
    <Button android:id="@id/mailbox_delete_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="2.0dip" android:text="@string/mailbox_delete_thread" android:layout_weight="0.33" />
</LinearLayout>
