<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:background="#ffcfd4de" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="24.0sp" android:textColor="@color/white" android:gravity="center" android:orientation="horizontal" android:background="@drawable/global_top_background" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/places_title" />
        <LinearLayout android:background="@color/white" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/checkin_pic" android:layout_width="40.0dip" android:layout_height="40.0dip" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip">
                <TextView android:id="@id/places_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:bufferType="spannable" />
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/home_places_icon" />
                    <TextView android:textColor="@drawable/post_date_color" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/places_timestamp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginTop="30.0dip" android:layout_marginBottom="30.0dip" android:src="@drawable/home_places_icon" />
            <TextView android:textSize="16.0sp" android:gravity="center_horizontal" android:id="@id/disclosure_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/places_disclosure_here_now_off" />
            <TextView android:textSize="16.0sp" android:textColor="@color/dark_blue_text_color" android:gravity="center_horizontal" android:id="@id/learn_more" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/places_learn_more" />
            <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <Button android:textSize="22.0sp" android:textColor="@color/white" android:id="@id/disclosure_agree" android:background="@drawable/blue_button_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/eula_agree" />
                <Button android:textSize="22.0sp" android:textColor="@color/dark_blue_text_color" android:id="@id/disclosure_disagree" android:background="@drawable/btn_action" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/eula_disagree" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
