<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/title_layout" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/login_background" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="9.0dip">
        <TextView android:textSize="14.0sp" android:textColor="@drawable/login_font_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/login_email_title" />
        <EditText android:id="@id/login_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress"> android:textSize="14sp"
<requestFocus />
        </EditText>
        <TextView android:textSize="14.0sp" android:textColor="@drawable/login_font_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="6.0dip" android:text="@string/login_password_title" />
        <EditText android:textSize="14.0sp" android:id="@id/login_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true" android:singleLine="true" android:inputType="textPassword" />
        <LinearLayout android:gravity="right" android:orientation="horizontal" android:paddingTop="3.0dip" android:paddingRight="2.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textStyle="bold" android:textColor="@drawable/solid_white" android:id="@id/login_login" android:background="@drawable/blue_button_background" android:padding="10.0dip" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/login_signin" />
        </LinearLayout>
    </LinearLayout>
    <View android:background="@drawable/fixed_divider_horizontal_bright" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:gravity="top|right|center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@drawable/login_font_color" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_sign_up_here" />
        <TextView android:textStyle="bold" android:textColor="@drawable/login_font_color" android:id="@id/login_signup" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_signup" />
    </LinearLayout>
</LinearLayout>
