<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rootLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <AbsoluteLayout android:id="@id/abs" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.facebook.katana.ui.PhotoGallery android:id="@id/gallery" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </AbsoluteLayout>
    <ImageView android:id="@id/prev_image" android:focusable="true" android:visibility="invisible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/btn_camera_arrow_left" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
    <ImageView android:id="@id/next_image" android:focusable="true" android:visibility="invisible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/btn_camera_arrow_right" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/action_icon_panel" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="30.0dip" android:layout_alignParentRight="true">
        <com.facebook.katana.ActionMenuButton android:id="@id/setas" android:text="@string/view_photo_set_as" android:drawableTop="@drawable/ic_menu_set_as" style="@style/OnscreenActionIcon" />
        <com.facebook.katana.ActionMenuButton android:id="@id/share" android:text="@string/view_photo_share" android:drawableTop="@drawable/ic_menu_share" style="@style/OnscreenActionIcon" />
        <com.facebook.katana.ActionMenuButton android:id="@id/comment" android:text="@string/view_photo_comment" android:drawableTop="@drawable/ic_photo_comment" style="@style/OnscreenActionIcon" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/edit_bar" android:background="@drawable/share_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <EditText android:gravity="top" android:id="@id/caption_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="6.0dip" android:hint="@string/view_photo_caption_hint" android:maxLines="4" android:minLines="2" android:inputType="textCapSentences|textAutoCorrect|textMultiLine" android:imeActionLabel="@string/view_photo_update" android:imeActionId="101" />
        <LinearLayout android:orientation="horizontal" android:id="@id/feedback_comment_bar" android:background="@android:drawable/bottom_bar" android:paddingTop="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/update_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="3.0dip" android:text="@string/view_photo_update" android:layout_weight="0.5" />
            <Button android:id="@id/clear_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="2.0dip" android:layout_marginBottom="3.0dip" android:text="@string/view_photo_clear" android:layout_weight="0.5" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
