<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/title_layout" />
    <include layout="@layout/fat_title_bar_layout" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/album_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:hint="@string/create_album_name_hint" android:inputType="textCapSentences|textAutoCorrect" />
            <EditText android:id="@id/album_location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:hint="@string/create_album_location_hint" android:inputType="textCapSentences|textAutoCorrect" />
            <EditText android:gravity="top" android:id="@id/album_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:hint="@string/create_album_description_hint" android:minLines="3" android:inputType="textCapSentences|textAutoCorrect|textMultiLine" />
            <TextView android:textStyle="bold" android:textColor="@drawable/solid_white" android:background="@color/privacy_background_color" android:paddingLeft="7.0dip" android:paddingTop="2.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/privacy_visibility_separator_text" />
            <Spinner android:id="@id/album_visibility" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="7.0dip" android:layout_marginRight="5.0dip" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:background="@android:drawable/bottom_bar" android:paddingTop="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/create_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="3.0dip" android:layout_weight="0.5" />
        <Button android:id="@id/cancel_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="2.0dip" android:layout_marginBottom="3.0dip" android:text="@string/cancel" android:layout_weight="0.5" />
    </LinearLayout>
</LinearLayout>
