<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/title_layout" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <include layout="@layout/fat_title_bar_layout" />
            <EditText android:gravity="top" android:id="@id/upload_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="5.0dip" android:hint="@string/upload_add_title_here" android:minLines="3" android:inputType="textCapSentences|textAutoCorrect|textMultiLine" android:imeOptions="actionDone" />
            <EditText android:gravity="top" android:id="@id/upload_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="5.0dip" android:hint="@string/upload_add_description_here" android:minLines="10" android:inputType="textCapSentences|textAutoCorrect|textMultiLine" android:imeOptions="actionDone" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:background="@drawable/bg_keyboard_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
        <Button android:textStyle="bold" android:textColor="@color/dark_blue_text_color" android:id="@id/btn_upload" android:background="@drawable/btn_action" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="10.0dip" android:text="@string/upload_upload" android:layout_weight="0.5" />
        <Button android:textStyle="bold" android:textColor="@color/dark_blue_text_color" android:id="@id/btn_cancel" android:background="@drawable/btn_action" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/cancel" android:layout_weight="0.5" />
    </LinearLayout>
</LinearLayout>
